View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030569 | Open CASCADE | OCCT:Foundation Classes | public | 2019-03-13 16:55 | 2019-04-08 12:19 |
Reporter | kgv | Assigned To | apn | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.0.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0030569: Foundation Classes - NCollection_Shared lacks inclusion of NCollection_DefineAlloc.hxx | ||||
Description | Compilation of the following code leads to compiler error:#include <NCollection_Shared.hxx> #include <Standard_Mutex.hxx> typedef NCollection_Shared<Standard_Mutex> My_Mutex; | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR30569 has been created by kgv. SHA-1: 7125d74033ac2ff8729eef51d0141fbe92a59128 Detailed log of new commits: Author: kgv Date: Wed Mar 13 16:53:16 2019 +0300 0030569: Foundation Classes - NCollection_Shared lacks inclusion of NCollection_DefineAlloc.hxx Add missing includes. |
|
Patch is ready for review. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR30569-master-KGV |
|
Combination - OCCT branch : CR30569 master SHA - 7125d74033ac2ff8729eef51d0141fbe92a59128 d67d4b811012eef8913d3c535c29654d0acf3c4c Products branch : master SHA - 19cf12d4f918562ea1456aa224c6f7a64b9c4ad7 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16600.949999999957 / 16599.24999999996 [+0.01%] Products Total CPU difference: 9074.49000000003 / 9092.71000000004 [-0.20%] Windows-64-VC14: OCCT Total CPU difference: 18017.0 / 17985.28125 [+0.18%] Products Total CPU difference: 10465.4375 / 10460.953125 [+0.04%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR30569 has been deleted by inv. SHA-1: 7125d74033ac2ff8729eef51d0141fbe92a59128 |
occt: master d65f9183 2019-03-13 13:53:16 Committer: apn Details Diff |
0030569: Foundation Classes - NCollection_Shared lacks inclusion of NCollection_DefineAlloc.hxx Add missing includes. |
Affected Issues 0030569 |
|
mod - src/NCollection/NCollection_Shared.hxx | Diff File | ||
mod - src/Standard/Standard_Mutex.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-03-13 16:55 | kgv | New Issue | |
2019-03-13 16:55 | kgv | Assigned To | => abv |
2019-03-13 16:58 | git | Note Added: 0082924 | |
2019-03-13 18:28 | kgv | Note Added: 0082933 | |
2019-03-13 18:28 | kgv | Status | new => resolved |
2019-03-13 18:28 | kgv | Product Version | 7.3.0 => 7.0.0 |
2019-03-18 13:46 | kgv | Assigned To | abv => bugmaster |
2019-03-18 13:46 | kgv | Severity | minor => trivial |
2019-03-18 13:46 | kgv | Status | resolved => reviewed |
2019-03-18 16:07 | apn | Test case number | => Not needed |
2019-03-18 16:07 | apn | Note Added: 0083051 | |
2019-03-18 16:07 | apn | Status | reviewed => tested |
2019-03-24 18:54 | apn | Changeset attached | => occt master d65f9183 |
2019-03-24 18:54 | apn | Assigned To | bugmaster => apn |
2019-03-24 18:54 | apn | Status | tested => verified |
2019-03-24 18:54 | apn | Resolution | open => fixed |
2019-04-08 12:19 | git | Note Added: 0083508 |