0030569: Foundation Classes - NCollection_Shared lacks inclusion of NCollection_DefineAlloc.hxx

Add missing includes.